--- a/Sentiment-Analysis/Base.lproj/Main.storyboard
+++ b/Sentiment-Analysis/Base.lproj/Main.storyboard
@@ -1,8 +1,9 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11201" systemVersion="16A320" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--Sentiment Analysis View Controller-->
@@ -14,24 +15,21 @@
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="1a1-CN-emC">
-                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="j7n-AA-Kew" customClass="SentimentAnalysisHeaderView" customModule="Sentiment_Analysis" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="0.0" width="600" height="60"/>
                                         <subviews>
                                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon_sentiments" translatesAutoresizingMaskIntoConstraints="NO" id="N7T-zr-LmA">
-                                                <rect key="frame" x="260" y="15" width="80" height="30"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="80" id="JYi-Z8-bgg"/>
                                                     <constraint firstAttribute="height" constant="30" id="Muq-HT-hJb"/>
                                                 </constraints>
                                             </imageView>
                                         </subviews>
-                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <constraints>
                                             <constraint firstItem="N7T-zr-LmA" firstAttribute="centerY" secondItem="j7n-AA-Kew" secondAttribute="centerY" id="Fsr-Zt-bO3"/>
                                             <constraint firstAttribute="height" constant="60" id="gEk-Xt-1bv"/>
@@ -42,19 +40,15 @@
                                         </connections>
                                     </view>
                                     <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VIe-OG-iCj" customClass="SentimentAnalysisTextView" customModule="Sentiment_Analysis" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="60" width="600" height="480"/>
-                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                     </textView>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1FV-p7-jby" customClass="SentimentAnalysisFooterView" customModule="Sentiment_Analysis" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="540" width="600" height="60"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" alignment="top" translatesAutoresizingMaskIntoConstraints="NO" id="v1h-Gq-AHi">
-                                                <rect key="frame" x="0.0" y="0.0" width="600" height="60"/>
                                                 <subviews>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CyT-fl-plo" customClass="AppButton" customModule="Sentiment_Analysis" customModuleProvider="target">
-                                                        <rect key="frame" x="0.0" y="0.0" width="60" height="60"/>
                                                         <constraints>
                                                             <constraint firstAttribute="width" constant="60" id="ag7-ty-C9c"/>
                                                             <constraint firstAttribute="height" constant="60" id="spg-yU-FuY"/>
@@ -62,14 +56,12 @@
                                                         <state key="normal" image="button_more"/>
                                                     </button>
                                                     <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon_sentiment_positive" translatesAutoresizingMaskIntoConstraints="NO" id="GRG-oc-1ln">
-                                                        <rect key="frame" x="270" y="0.0" width="60" height="60"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="60" id="2ji-Cd-KjK"/>
                                                             <constraint firstAttribute="width" constant="60" id="It3-pd-Hf3"/>
                                                         </constraints>
                                                     </imageView>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pUE-iE-5N1" customClass="AppButton" customModule="Sentiment_Analysis" customModuleProvider="target">
-                                                        <rect key="frame" x="540" y="0.0" width="60" height="60"/>
                                                         <constraints>
                                                             <constraint firstAttribute="width" constant="60" id="H74-EA-WQO"/>
                                                             <constraint firstAttribute="height" constant="60" id="MRN-LG-Sdf"/>
@@ -83,7 +75,7 @@
                                                 </constraints>
                                             </stackView>
                                         </subviews>
-                                        <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                        <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="60" id="JvT-B1-VeA"/>
                                             <constraint firstItem="v1h-Gq-AHi" firstAttribute="centerY" secondItem="1FV-p7-jby" secondAttribute="centerY" id="Pcu-v0-uWt"/>
@@ -100,7 +92,7 @@
                                 </subviews>
                             </stackView>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="1a1-CN-emC" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="A3h-fr-ydg"/>
                             <constraint firstItem="1a1-CN-emC" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="D3h-WN-qwe"/>
